Fix search input on firefox

--- a/wagtailio/static/sass/base/_base.scss
+++ b/wagtailio/static/sass/base/_base.scss
@@ -30,6 +30,26 @@ fieldset {
   padding: 0;
 }
 
+/**
+1. Correct the odd appearance in Chrome and Safari.
+2. Correct the outline style in Safari.
+*/
+
+[type='search'] {
+  // stylelint-disable-next-line property-no-vendor-prefix
+	-webkit-appearance: textfield; /* 1 */
+	outline-offset: -2px; /* 2 */
+}
+
+/**
+Remove the inner padding in Chrome and Safari on macOS.
+*/
+
+::-webkit-search-decoration {
+    // stylelint-disable-next-line property-no-vendor-prefix
+	-webkit-appearance: none;
+}
+
 button {
     border: 0;
     background-color: transparent;
